--- a/Miniflow1.ipynb
+++ b/Miniflow1.ipynb
@@ -80,6 +80,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Add(Node):\n",
+    "    def __init__(self, x, y):\n",
+    "        Node.__init__(self, [x, y])\n",
+    "\n",
+    "    def forward(self):\n",
+    "        \"\"\"\n",
+    "        You'll be writing code here in the next quiz!\n",
+    "        \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
