--- a/miniflow_1a.ipynb
+++ b/miniflow_1a.ipynb
@@ -544,6 +544,192 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ufunc 'exp'>"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.exp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.7182818284590451"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.exp(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7.3890560989306504, 2.7182818284590451, 1.1051709180756477]\n",
+      "11.2125088455\n",
+      "[ 0.7  0.2  0.1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_in = [2.0, 1.0, 0.1]\n",
+    "\n",
+    "def softmax1(inputs, decimals):\n",
+    "    results = [np.exp(x) for x in inputs]\n",
+    "    summation = sum(results)\n",
+    "    print(results)\n",
+    "    print(summation)\n",
+    "    prob = [(x / summation) for x in results]\n",
+    "    prob = np.around(prob, decimals=decimals)\n",
+    "    print(prob)\n",
+    "\n",
+    "softmax1(y_in, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def softmax_verbose(inputs, decimals=None):\n",
+    "    results = [np.exp(x) for x in inputs]\n",
+    "    summation = sum(results)    \n",
+    "    probabilities = [(x / summation) for x in results]\n",
+    "    if decimals is not None:\n",
+    "        probabilities = np.around(probabilities, decimals=decimals)    \n",
+    "    return probabilities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.6590011388859679, 0.2424329707047139, 0.09856589040931818]"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "softmax_verbose(y_in)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def softmax(inputs):\n",
+    "    return np.exp(inputs) / np.sum(np.exp(inputs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.65900114,  0.24243297,  0.09856589])"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "softmax(y_in)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def softmax_verbose(inputs):\n",
+    "    results = [np.exp(x) for x in inputs]\n",
+    "    summation = sum(results)    \n",
+    "    probabilities = [(x / summation) for x in results]\n",
+    "    return probabilities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.6590011388859679, 0.2424329707047139, 0.09856589040931818]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "softmax_verbose(y_in)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
